<resources>
    <string name="app_name">Week12_App</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up!</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="signup">Signup</string>
    <string name="user_first_name">First Name</string>
    <string name="user_last_name">Last Name</string>
    <string name="logout">Logout</string>
    <string name="login">Login!</string>
    <string name="vibrant_developer">Vibrant Developer</string>
    <string name="login_here">LOGIN HERE</string>
    <string name="username">Username</string>
    <string name="your_name">Your Name</string>
</resources>